feat: Add environment variable support for ingress domain configuration
- Update ingress.yaml to use INGRESS_HOST placeholder instead of hardcoded domain
- Modify GitHub Actions workflow to inject INGRESS_HOST variable during deployment
- Update README documentation to reflect environment variable configuration
- Maintain open source compatibility by avoiding hardcoded domain values

This change allows the same configuration to work across different environments
while keeping domain-specific information in GitHub Secrets.

--- a/.github/workflows/deploy-k8s.yml
+++ b/.github/workflows/deploy-k8s.yml
@@ -18,6 +18,7 @@ env:
   GKE_CLUSTER: ${{ secrets.GKE_CLUSTER }}
   GKE_ZONE: ${{ secrets.GKE_ZONE }}
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  INGRESS_HOST: ${{ secrets.INGRESS_HOST || 'mcp.example.com' }}
 
 jobs:
   deploy:
@@ -60,6 +61,10 @@ jobs:
     - name: Deploy to GKE
       run: |
         cd k8s-deployment
+        # Replace INGRESS_HOST placeholder with actual value
+        if [ -f ingress.yaml ]; then
+          sed -i "s/INGRESS_HOST/$INGRESS_HOST/g" ingress.yaml
+        fi
         kubectl apply -k .
 
     - name: Verify deployment
