fix: Add TLS configuration to ingress for HTTPS support
- Add tls section to ingress specification with secretName reference
- This resolves GKE ingress error about both HTTP and HTTPS being disabled
- Now supports HTTPS traffic while maintaining kubernetes.io/ingress.allow-http: false
- Created static IP address: mcp-neo4j-ip (34.54.166.8)

--- a/k8s-deployment/ingress.yaml
+++ b/k8s-deployment/ingress.yaml
@@ -9,6 +9,10 @@ metadata:
     networking.gke.io/managed-certificates: "mcp-neo4j-cert"
     kubernetes.io/ingress.allow-http: "false"
 spec:
+  tls:
+  - hosts:
+    - INGRESS_HOST
+    secretName: mcp-neo4j-cert-secret
   rules:
   - host: INGRESS_HOST
     http:
