--- a/k8s-deployment/ingress.yaml
+++ b/k8s-deployment/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: neo4j
   annotations:
     kubernetes.io/ingress.class: "gce"
-    kubernetes.io/ingress.global-static-ip-name: "mcp-neo4j-ip"
+    kubernetes.io/ingress.global-static-ip-name: "prod-autopilot-us-central-ip"
     networking.gke.io/managed-certificates: "mcp-neo4j-cert"
     kubernetes.io/ingress.allow-http: "false"
 spec:
