--- a/.gitignore
+++ b/.gitignore
@@ -22,11 +22,7 @@ __pycache__
 .venv
 
 # IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode
 
 # misc
 /.sass-cache
